--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Головна сторінка";
 }
 @section featured {
     <section class="featured">
